# entro_tunnel

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md
.claude/: launch.json
.github/workflows/: build.yml
core/client-core/: Cargo.toml
core/client-core/src/: chain.rs  config.rs  engine.rs  latency.rs  lib.rs  netcfg.rs  proxy.rs  sysproxy.rs
core/core/: Cargo.toml
core/core/src/: config.rs  error.rs  lib.rs  tun.rs
core/core/src/crypto/: mod.rs  noise.rs  tls.rs
core/core/src/protocol/: control.rs  frame.rs  mod.rs
core/core/src/transport/: framing.rs  mod.rs  quic.rs  tcp.rs  ws.rs
deploy/: entrotunnel.service  nginx-tun1.hydeng.cn.conf  server2-install.sh
desktop/cli/: Cargo.toml
desktop/cli/src/: main.rs
desktop/client-tauri/: README.md  index.html  package.json  vite.config.ts
desktop/client-tauri/src/: App.tsx  api.ts  icons.tsx  styles.css  vite-env.d.ts
desktop/client-tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
desktop/client-tauri/src-tauri/icons/: icon.icns
desktop/client-tauri/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md  PROTOCOL.md  TESTING.md
mobile/android/: README.md  build.gradle.kts  settings.gradle.kts
mobile/android/app/: build.gradle.kts  proguard-rules.pro
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/entrotunnel/android/: App.kt  MainActivity.kt
mobile/android/app/src/main/kotlin/com/entrotunnel/android/core/: EngineController.kt  Models.kt  Native.kt
mobile/android/app/src/main/kotlin/com/entrotunnel/android/ui/: AppRoot.kt  Theme.kt
mobile/android/app/src/main/kotlin/com/entrotunnel/android/vpn/: EntroVpnService.kt
mobile/android/app/src/main/res/drawable/: ic_launcher.xml
mobile/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
mobile/android/rust/: Cargo.toml
mobile/android/rust/src/: engine.rs  lib.rs
scripts/: build-linux.sh  deploy-and-test.sh  test-http-proxy.sh  test-ipv6.sh  test-multiserver.sh  test-split-tunnel.sh  test-transports.sh  test-vpn.sh
server/: Cargo.toml
server/src/: config.rs  main.rs  net.rs  session.rs  web.rs
server/web/: admin.html
