[package]
name = "entrotunnel-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "entrotunnel-server"
path = "src/main.rs"

[features]
default = ["tcp", "tls", "ws", "quic"]
tcp = ["entrotunnel-core/tcp"]
tls = ["entrotunnel-core/tls"]
ws = ["entrotunnel-core/ws"]
quic = ["entrotunnel-core/quic"]

[dependencies]
entrotunnel-core = { path = "../core/core", default-features = false }

tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ipnet = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
clap = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
