[package]
name = "entrotunnel-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "entrotunnel_client"
path = "src/lib.rs"

[features]
default = ["tcp", "tls", "ws", "quic"]
tcp = ["entrotunnel-core/tcp"]
tls = ["entrotunnel-core/tls"]
ws = ["entrotunnel-core/ws"]
quic = ["entrotunnel-core/quic"]

[dependencies]
entrotunnel-core = { path = "../core", default-features = false }

tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ipnet = { workspace = true }
base64 = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
