[package]
name = "entrotunnel-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# `tcp` is pure-Rust (snow) and cross-compiles with zero C deps — that is the
# feature set used for the Dockerized integration test. `tls`/`ws`/`quic` pull
# rustls/quinn and are part of the full product build.
default = ["tcp", "tls", "ws", "quic"]
tcp = ["dep:snow"]
tls = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile", "dep:rcgen", "dep:webpki-roots"]
ws = ["tls", "dep:tokio-tungstenite"]
quic = ["tls", "dep:quinn"]

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ipnet = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

snow = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
quinn = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
wintun = "0.5"
