[package]
name = "entrotunnel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "entrotunnel-cli"
path = "src/main.rs"

[features]
default = ["tcp", "tls", "ws", "quic"]
tcp = ["entrotunnel-client/tcp"]
tls = ["entrotunnel-client/tls"]
ws = ["entrotunnel-client/ws"]
quic = ["entrotunnel-client/quic"]

[dependencies]
entrotunnel-client = { path = "../../core/client-core", default-features = false }
entrotunnel-core = { path = "../../core/core", default-features = false }

tokio = { workspace = true }
tokio-util = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
