# Standalone workspace (detached from the repo root workspace via the empty
# [workspace] table) so the Tauri build graph doesn't slow down `cargo check`
# at the repo root. Path-depends on the shared engine crates.
[package]
name = "entrotunnel-app"
version = "1.3.0"
edition = "2021"

[[bin]]
name = "entrotunnel-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

entrotunnel-client = { path = "../../../core/client-core" }
entrotunnel-core = { path = "../../../core/core" }

# Privilege detection (TUN modes need root/admin).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1"

[workspace]
