# Android native core for EntroTunnel.
#
# A `cdylib` (`libentrotunnel_jni.so`) that the Kotlin app loads via JNI. It
# reuses the EXISTING desktop engine crates (`entrotunnel-core` /
# `entrotunnel-client`) unchanged — only the Android-specific glue lives here:
# the VpnService-fd packet loop, the JNI entry points, and a log ring buffer.
#
# Built with `cargo-ndk` (see the app's Gradle config) into the APK's jniLibs.
# Detached from the desktop workspace so the desktop build/CI never compiles it.

[package]
name = "entrotunnel-jni"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[lib]
name = "entrotunnel_jni"
crate-type = ["cdylib"]

[features]
# Full transport set for the real Android build (needs the NDK for ring/quinn).
default = ["tls", "ws", "quic"]
# `tcp`-only is pure Rust — lets `cargo check --target aarch64-linux-android`
# validate this crate WITHOUT the Android NDK installed.
tcp = []
tls = ["entrotunnel-core/tls", "entrotunnel-client/tls"]
ws = ["entrotunnel-core/ws", "entrotunnel-client/ws"]
quic = ["entrotunnel-core/quic", "entrotunnel-client/quic"]

[dependencies]
entrotunnel-core = { path = "../../../core/core", default-features = false, features = ["tcp"] }
entrotunnel-client = { path = "../../../core/client-core", default-features = false, features = ["tcp"] }

jni = "0.21"
libc = "0.2"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
